# hwinarion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  recording.py  requirements.txt  streaming.py  streaming_class.py
.github/workflows/: quality.yaml
hwinarion/: longma.py
hwinarion/actors/: __init__.py  action_recorder.py  hwinarion.py  mouse_mover.py
hwinarion/audio/: audio_file.py  base.py  base_audio_source.py  listeners.py  microphone.py
hwinarion/dispatcher/: __init__.py
hwinarion/listeners/: base.py  prebuilt.py  state_labelers.py
hwinarion/screen/: pyautogui_wrapper.py
hwinarion/speech_to_text/: __init__.py  base.py  coqui_stt.py  sphinx.py  vosk.py  whisper.py
tests/: run_without_display.py
tests/actors/: test_action_recorder.py  test_mouse_mover.py
tests/audio/: test_audio_file.py  test_base.py
tests/dispatcher/: test_base_dispatcher.py
tests/screen/: test_pyautogui_wrapper.py
tests/speech_to_text/: test_base.py
