[tool.poetry]
name = "hwinarion"
version = "0.1.0"
description = "Control your computer with a microphone and webcam"
authors = ["Michael Lipschultz <michael.lipschultz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pydub = "^0.25.1"
PyAudio = "^0.2.12"
matplotlib = "^3.6.1"
numpy = "^1.23.3"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
pylint = "^2.15.3"
isort = "^5.10.1"
pytest = "^7.1.3"


[tool.poetry.group.vosk.dependencies]
vosk = "^0.3.44"


[tool.poetry.group.sphinx.dependencies]
pocketsphinx = "^5.0.0"


[tool.poetry.group.coqui.dependencies]
stt = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = ["import-error"]

[tool.pylint.FORMAT]
max-line-length = 120
