[tool.poetry]
name = "hwinarion"
version = "0.1.0"
description = "Control your computer with a microphone and webcam"
authors = ["Michael Lipschultz <michael.lipschultz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.3"
loguru = "^0.6.0"
PyAutoGUI = "^0.9.53"
bree = {git = "git@github.com:lipschultz/bree.git", rev = "main"}
donkey-ears = {git = "git@github.com:lipschultz/donkey-ears.git"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
pylint = "^2.15.3"
isort = "^5.10.1"
pytest = "^7.1.3"
coverage = "^6.5.0"
freezegun = "^1.2.2"
pytest-cov = "^4.0.0"
PyVirtualDisplay = "^3.0"
EasyProcess = "^1.1"


[tool.poetry.group.vosk.dependencies]
donkey-ears = {git = "git@github.com:lipschultz/donkey-ears.git", extras = ["vosk"]}


[tool.poetry.group.sphinx.dependencies]
donkey-ears = {git = "git@github.com:lipschultz/donkey-ears.git", extras = ["sphinx"]}


[tool.poetry.group.coqui.dependencies]
donkey-ears = {git = "git@github.com:lipschultz/donkey-ears.git", extras = ["coqui"]}


[tool.poetry.group.whisper.dependencies]
donkey-ears = {git = "git@github.com:lipschultz/donkey-ears.git", extras = ["whisper"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = ["import-error", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.basic]
good-names = ["fp", "i", "x", "y"]
